<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_pregunta">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reclamarBronze"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:autoSizeTextType="uniform"
        android:background="@drawable/boto_pregunta"
        android:backgroundTint="#00BFDF"
        android:fontFamily="@font/redhattext_regular"
        android:gravity="center_horizontal|center_vertical"
        android:maxLines="1"
        android:padding="5dp"
        android:text="@string/reclamar"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/guideline48"
        app:layout_constraintEnd_toStartOf="@+id/guideline31"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline22"
        app:layout_constraintTop_toTopOf="@+id/guideline46" />

    <TextView
        android:id="@+id/recompensa3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/redhattext_regular"
        android:text="@string/medallaBronze"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/guideline48"
        app:layout_constraintEnd_toStartOf="@+id/guideline22"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline27"
        app:layout_constraintTop_toTopOf="@+id/guideline47" />

    <TextView
        android:id="@+id/vuitcentsPunts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/redhattext_medium"
        android:text="@string/vuitcentsPunts"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/guideline47"
        app:layout_constraintEnd_toStartOf="@+id/guideline22"
        app:layout_constraintStart_toStartOf="@+id/guideline27"
        app:layout_constraintTop_toTopOf="@+id/guideline46" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reclamarPlata"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:autoSizeTextType="uniform"
        android:background="@drawable/boto_pregunta"
        android:backgroundTint="#00BFDF"
        android:fontFamily="@font/redhattext_regular"
        android:gravity="center_horizontal|center_vertical"
        android:maxLines="1"
        android:padding="5dp"
        android:text="@string/reclamar"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/guideline45"
        app:layout_constraintEnd_toStartOf="@+id/guideline31"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline22"
        app:layout_constraintTop_toTopOf="@+id/guideline21" />

    <TextView
        android:id="@+id/milPunts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/redhattext_medium"
        android:text="@string/milPunts"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/guideline44"
        app:layout_constraintEnd_toStartOf="@+id/guideline22"
        app:layout_constraintStart_toStartOf="@+id/guideline27"
        app:layout_constraintTop_toTopOf="@+id/guideline21" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <TextView
        android:id="@+id/titolSeccio"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/redhattext_regular"
        android:gravity="center_horizontal"
        android:text="@string/tenda"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/puntsActuals"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/redhattext_regular"
        android:gravity="center_horizontal"
        android:text="@string/puntsActuals"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.73" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.78" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.57" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.32" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.37" />

    <TextView
        android:id="@+id/dosMilPunts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/redhattext_medium"
        android:text="@string/dosMilPunts"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/guideline28"
        app:layout_constraintEnd_toStartOf="@+id/guideline22"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline27"
        app:layout_constraintTop_toTopOf="@+id/guideline20"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/recompensa"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/redhattext_regular"
        android:text="@string/medallaOr"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/guideline29"
        app:layout_constraintEnd_toStartOf="@+id/guideline22"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline27"
        app:layout_constraintTop_toBottomOf="@+id/dosMilPunts"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/recompensa2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/redhattext_regular"
        android:text="@string/medallaPlata"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/guideline45"
        app:layout_constraintEnd_toStartOf="@+id/guideline22"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline27"
        app:layout_constraintTop_toTopOf="@+id/guideline44" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reclamarOr"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:autoSizeTextType="uniform"
        android:background="@drawable/boto_pregunta"
        android:backgroundTint="#00BFDF"
        android:fontFamily="@font/redhattext_regular"
        android:gravity="center_horizontal|center_vertical"
        android:maxLines="1"
        android:padding="5dp"
        android:text="@string/reclamar"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/guideline29"
        app:layout_constraintEnd_toStartOf="@+id/guideline31"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline22"
        app:layout_constraintTop_toTopOf="@+id/guideline20"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.37" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:layout_constraintGuide_percent="0.1" />

</androidx.constraintlayout.widget.ConstraintLayout>