<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fons_gradient"
    tools:context=".pregunta_correcte">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botoCorrecte"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"

        android:background="@drawable/boto_pregunta"
        android:backgroundTint="#026F00"
        android:fontFamily="@font/redhattext_bold"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/correcte"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF"

        app:layout_constraintBottom_toTopOf="@+id/guideline33"
        app:layout_constraintEnd_toStartOf="@+id/guideline30"
        app:layout_constraintStart_toStartOf="@+id/guideline26"
        app:layout_constraintTop_toTopOf="@+id/guideline32" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/seguentPregunta"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/boto_pregunta"
        android:backgroundTint="#026F00"

        android:fontFamily="@font/redhattext_regular"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/seguentPregunta"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF"
        android:autoSizeTextType="uniform"

        app:layout_constraintBottom_toTopOf="@+id/guideline39"
        app:layout_constraintEnd_toStartOf="@+id/guideline37"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline36"
        app:layout_constraintTop_toTopOf="@+id/guideline38" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.36" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.46" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.84" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:textSize="35sp"
        android:fontFamily="@font/redhattext_regular"
        android:text="@string/puntsAfegir"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline35"
        app:layout_constraintEnd_toStartOf="@+id/guideline30"
        app:layout_constraintStart_toStartOf="@+id/guideline26"
        app:layout_constraintTop_toTopOf="@+id/guideline34" />
</androidx.constraintlayout.widget.ConstraintLayout>